# AgentDesk

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
assets/: AppIcon.icns
docs/superpowers/plans/: 2026-04-08-p0-core.md
docs/superpowers/specs/: 2026-04-08-agentdesk-design.md
helpers/: island-overlay  island-overlay-universal  island.swift
scripts/: build-dmg.sh
src/: main.rs
src/models/: agent.rs  audit.rs  budget.rs  cost.rs  health.rs  memory.rs  mod.rs  notification.rs  preset.rs  project.rs  session.rs  template.rs  workflow.rs
src/services/: agent_detector.rs  agent_names.rs  approved_projects.rs  audit_recorder.rs  budget_manager.rs  bundle_io.rs  claudemd_writer.rs  codex_scanner.rs  config.rs  cost_tracker.rs  health_monitor.rs  instruction_sender.rs  island.rs  log_streamer.rs  memory_indexer.rs  mod.rs  notifier.rs  preset_manager.rs  project_manager.rs  project_scanner.rs  session_reader.rs  template_manager.rs  terminal_launcher.rs  workflow_engine.rs  workflow_store.rs
src/ui/: icons.rs  mod.rs  styles.rs
src/ui/app_shell/: command_palette.rs  dashboard.rs  dynamic_island.rs  home_dashboard.rs  instruction_dialog.rs  memory_view.rs  mod.rs  new_agent_dialog.rs  notification_center.rs  settings.rs  sidebar.rs  templates.rs  workflows_section.rs
