[package]
name = "agentdesk"
version = "0.3.1"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tao = "0.30.8"
